@@ -1,3 +1,13 @@
+2000-08-04  Yuuichi Teranishi  <teranisi@quickhack.net>
+
+	* emacs/mhc-schedule.el (mhc-schedule-subject): Don't decode
+	encoded word.
+	(mhc-schedule-location): Ditto.
+
+	* emacs/mhc-parse.el (mhc-parse/subject): Decode encoded word.
+	(mhc-parse/location): Ditto.
+	(mhc-parse/category): Ditto.
+
 2000-08-04  Hideyuki SHIRAI  <shirai@quickhack.net>
 
 	* emacs/mhc.el (mhc-mode-menu-spec): Add mhc-file-toggle-offline() and
